[package]
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "An OSC library for Rust"
documentation = "https://docs.rs/rosc"
edition = "2021"
keywords = ["audio", "osc"]
license = "MIT/Apache-2.0"
name = "rosc"
readme = "README.md"
repository = "https://github.com/klingtnet/rosc"
rust-version = "1.56"
version = "0.11.0"

[features]
default = ["std"]
lints = ["clippy"]
std = []

[dependencies]
byteorder = {version = "1", default-features = false}
clippy = {version = "^0", optional = true}
nom = {version = "7", default-features = false, features = ["alloc"]}

[dev-dependencies]
hex = {version = "0.4"}
